2007-10-04
	* Added different delimiter for list of speaker,sessions and slots.
	* Change table for speaker attendance to speaker restrictions.
	* Implement attention of speaker restrictions for time slot list in
	  session editing.

2007-10-03
	* Added slot info for speaker list and speaker view.
	* Only free time slots can be selected when editing sessions.
	* Changed template for time slots for compact display of time column.

2007-10-02
	* Possible hide the display of "not assigned" text in time slot view.
	* Possible hide the display of "not defined" text in time slot view.
	* Possible hide the display of "Time" text in time slot view.
	* Added session number, category and shortkey to be used in template 
	  of session list.

2007-10-01
	* Added defining a slot for all rooms, for lunch etc.
	* Sort session list on category and number.
	* Sort speaker list on name, firstname.
	* Added session number, category and shortkey to be used in template 
	  of speaker list, speaker detail and session details.

2007-09-30
	* Added some backend editing functions.
	* Added select boxes for backend record editing.
	* Possible hide the detail link for categories in the time slot view.

2007-09-23
	* Added a default framework for a backend module.
	* Added tab sheets for database tables.
	* Added display of events table.

2007-09-17
	* Add table for speaker attendance.

2007-09-16
	* Added dutch language.

2007-09-09
	* Added combobox for event selection at session list and time slot list.

2007-09-04
	* Added combobox for event day selection at time slot list.

2007-08-31
	* First version of slot list display.

2007-08-28
	* Project homepage and Trac bug tracking are installed

2007-08-24
	* Added marker for session data to the speaker list view

2007-08-22
	* Added marker from single speaker view to the speaker list view
	* Added field country to speaker record
	* Added field website to localization record
	* Added web link selection to country, website and email fields