@@ -99,9 +99,6 @@ $TCA['tx_wseevents_timeslots'] = Array (
 		'tstamp' => 'tstamp',
 		'crdate' => 'crdate',
 		'cruser_id' => 'cruser_id',
-		'languageField' => 'sys_language_uid',	
-		'transOrigPointerField' => 'l18n_parent',	
-		'transOrigDiffSourceField' => 'l18n_diffsource',	
 		'default_sortby' => 'ORDER BY crdate',	
 		'delete' => 'deleted',	
 		'enablecolumns' => Array (		
@@ -184,9 +181,6 @@ $TCA['tx_wseevents_speakerrestrictions'] = Array (
 		'tstamp' => 'tstamp',
 		'crdate' => 'crdate',
 		'cruser_id' => 'cruser_id',
-		'languageField' => 'sys_language_uid',	
-		'transOrigPointerField' => 'l18n_parent',	
-		'transOrigDiffSourceField' => 'l18n_diffsource',	
 		'default_sortby' => 'ORDER BY event,speaker',	
 		'delete' => 'deleted',	
 		'enablecolumns' => Array (		
